Bug 100248 - Crash scrolling upwards the Insert menu, then pointing the format menu (non-native menus)
Summary: Crash scrolling upwards the Insert menu, then pointing the format menu (non-n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.0.beta1
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1 target:5.1.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-06-06 22:20 UTC by RGB
Modified: 2016-10-25 18:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Short screencast portraying the problem (1.30 MB, video/mp4)
2016-06-06 22:20 UTC, RGB
Details
strace from pre-release (3.06 MB, application/gzip)
2016-06-20 14:20 UTC, massimo.zaffaina
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RGB 2016-06-06 22:20:53 UTC
Created attachment 125524 [details]
Short screencast portraying the problem

On 5.2 beta 1, 64 bits, running on openSUSE 13.2 try the following:

1- Open the Insert menu
2- Put the cursor at the end of the menu and wait until it scrolls to show the remaining options
3- Now move the cursor to the beginning of the menu to make it scrolls upwards

Result:
The "scroll upwards" do not work and as soon as you move the pointer outside the menu Writer crashes and starts the recovery process. See the attached screencast.
Comment 1 Maxim Monastirsky 2016-06-09 12:04:09 UTC
Confirmed with 5.2/master with the gtk vclplug.

bisect range:

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=4ab3149381352c86cb84fc01fe69b2c7929c98fb...366de0553beb0f545b3cb0a74831ae120f01c7d6
Comment 2 Maxim Monastirsky 2016-06-09 12:49:40 UTC
Well, seems to be caused by:

commit d1182223dcd3aca6b0922f1b27bc1537bceca7ae
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon May 23 20:48:57 2016 +0100

    like menus do, restore focus to prev control when floatingwindow popdowns
    
    in the FloatWinPopupFlags::GrabFocus case
    
    Change-Id: Ibebf23c83133f74f00e5dbb2540f108a383462cc
Comment 3 Commit Notification 2016-06-09 16:20:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f89b9d8b8064a2f323f5b3362f88cb873bad8fcc

Resolves: tdf#100248 vcl menu scroll timer still active post dispose

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-06-09 16:21:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7def34c0f013b0c9ac1b8ee39e800577bfa800e7&h=libreoffice-5-2

Resolves: tdf#100248 vcl menu scroll timer still active post dispose

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-06-09 16:24:40 UTC
FWIW I think the up button is just so tiny its very hard to get right over it, if you do it scrolls fine, but if you don't you may start to scroll as you pass over it, over shoot, get the next menu launched, old menu destroyed and old menu timer kicks in to autoscroll a dead menu
Comment 6 Commit Notification 2016-06-10 15:31:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11ca1ad43cc2def184ff7629e3880ccab6b8a1f1&h=libreoffice-5-1

Resolves: tdf#100248 vcl menu scroll timer still active post dispose

It will be available in 5.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 massimo.zaffaina 2016-06-20 14:20:42 UTC
Created attachment 125779 [details]
strace from pre-release

I tried the bug and it is still present in this version:

Versione: 5.2.0.0.beta2
Build ID: ae12e6f168ba39f137fc110174a37c482ce68fa4
Thread CPU: 2; Versione SO: Linux 4.1; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT.UTF-8)
OS: openSUSE Leap 42.1 (x86_64)

so i reopened this bug.