Resolves: tdf#100248 vcl menu scroll timer still active post dispose

Change-Id: I8988a42e7e505c967661c4a5f3c1e4ef3fbc08e0
(cherry picked from commit f89b9d8b8064a2f323f5b3362f88cb873bad8fcc)
(cherry picked from commit 7def34c0f013b0c9ac1b8ee39e800577bfa800e7)
Reviewed-on: https://gerrit.libreoffice.org/26125
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 11ca1ad43cc2def184ff7629e3880ccab6b8a1f1)